<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pcl.hci.uni_hannover.de.bicyclecruisecontrolmockup.Fragments.SensorInputFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:text="@string/daten_des_boards"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewNameBoard"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:text="@string/text"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:text="@string/id"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewIdBoard"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:text="@string/number"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:text="@string/uuid"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewUUIDBoard"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:text="@string/number"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/gechwindigkeit"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext_show_speed"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0"
            android:inputType="none"
            android:text="@string/_0_00"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="12dp"
            android:text="@string/puls"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edittext_show_heartRate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0"
            android:inputType="none"
            android:text="@string/_0_00"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:text="@string/warnung_zu_hoher_puls"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edittext_show_warning"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:inputType="none"
        android:text="@string/no_yes"
        android:textAlignment="center"
        android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
